# asteroids-sdl-cpp

./: .gitignore  README.md
src/: CMakeLists.txt  game.cpp  game.hpp  main.cpp  util.cpp  util.hpp
src/engine/: game.cpp  game.hpp  index_buffer.cpp  renderer.hpp  shader.cpp  util.cpp  util.hpp  vertex_array.cpp  vertex_buffer.cpp
src/engine/rendering/: index_buffer.cpp  index_buffer.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_buffer_layout.hpp
src/entities/: asteroid.cpp  asteroid.hpp  bullet.cpp  bullet.hpp  node.cpp  node.hpp  player.cpp  player.hpp
src/entities/base/: node.cpp  node.hpp
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
src/members/: vector2.cpp  vector2.hpp
src/res/shaders/: basic.shader
src/sdl_components/: texture.cpp  texture.hpp
